Fix: Adjust layout styles for button and info grid in Producto component for improved alignment

--- a/src/Pages/cart/producto/Producto.module.css
+++ b/src/Pages/cart/producto/Producto.module.css
@@ -128,7 +128,6 @@ button.addToCartButton {
   max-width: 500px;
 
   display: block;
-  margin: 0 auto;
 }
 
 .infoGrid {
@@ -139,7 +138,7 @@ button.addToCartButton {
   width: 100%;
   margin: 80px auto;
 
-  max-width: 1500px;
+  max-width: 1300px;
 }
 
 /* Columna izquierda y derecha */
@@ -149,7 +148,6 @@ button.addToCartButton {
   text-align: justify;
   display: flex;
   flex-direction: column;
-  align-items: center; /* <-- centro horizontal */
 }
 
 /*TABLETS*/
